# Hegardt

./: .editorconfig  .env  .eslintrc.json  .eslintrc.yml  .gitattributes  .gitignore  DEV_README.md  README.md  app.js  build_and_deploy.bat  build_and_deploy.ps1  ecosystem.config.js  eslint.config.js  index.html  index.js  nuxt.config.js  package-lock.json  package.json  server.js  start.js  tag_next_version.ps1  tsconfig.json  vue.config.js  webpack.config.js
.BACKUP/: .eslintrc.json  .gitignore  package.json  vue.config.js
backend/: app.js  index.js  package.json
client/: package.json
micronaut/: .editorconfig  Dockerfile  README.md  build.gradle  docker-compose.yml  micronaut-cli.yml  settings.gradle
mockups/: # UI mockups.md
models/: Person.js
public/: global.css  index.html
python/: .gitignore  MyDate.py  MyLocation.py  MySpouse.py  Person.py  README.md  all_ppl.json  all_ppl_with_sex.json  example strings  find_Id.py  generate-persons-seed.py  html.html  main.py  parse_html.py  parse_pdf.py  parse_pdf_portraits.ipynb  person_data.csv  persons.json  persons.ts  portrait_extraction.ipynb  pyproject.toml  requirements.txt
python/gender_parsing/: parse_html.py
python/src/: PeopleSection.py  sql_helpers.py
python/src/models/: life_event_model.py  location_model.py  marriage_model.py  occupation_model.py  partial_date_model.py  person_model.py
python/test/: test_main.py
python/tests/: ansedel_christian.html  ansedel_jurgen.html  test_Person.py  test_persons.py
routes/: index.js  personal_file.js  register.js  search.js
scripts/: db_misc.js
(+1636 files in other folders)
