[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Sebastian Hegardt",email = "se.hegardt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pypdf (>=6.6.2,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
