[project]
name = "python"
version = "0.1.0"
description = ""
authors = [
    {name = "Sebastian Hegardt",email = "se.hegardt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pypdf (>=6.6.2,<7.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
]

[tool.taskipy.tasks]
test = "poetry run python -m pytest --verbosity=1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]
